--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/assets/css/style.css.map
-/assets/css/style.scss
-/assets/css/_variables.scss
+#/assets/css/style.css.map
+#/assets/css/style.scss
+#/assets/css/_variables.scss
+
+#/inner-page.html
+#/portfolio-details.html
